--- a/Slack2/Base.lproj/Main.storyboard
+++ b/Slack2/Base.lproj/Main.storyboard
@@ -62,6 +62,9 @@
                                     <constraint firstAttribute="width" constant="22" id="npS-mK-I6w"/>
                                 </constraints>
                                 <state key="normal" image="addChannelButton"/>
+                                <connections>
+                                    <action selector="addChannelBtnPressed:" destination="ohF-Dh-4dq" eventType="touchUpInside" id="WLO-E5-A2r"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pJl-Iv-Cv8">
                                 <rect key="frame" x="0.0" y="115.5" width="375" height="427.5"/>
